--- a/divar-Index-Home/index.html
+++ b/divar-Index-Home/index.html
@@ -132,65 +132,65 @@
   <div class="row">
 
 <!-- START SIDEBAR -->
-      <aside class="col-md-3 sidebar">
+      <aside class="col-md-3 sidebar ">
         <h6>دسته‌ها</h6>
         <ul class="list-group border-bottom pb-3">
           <li class="list-group-item border-0">
-            <a class="d-flex flex-row text-muted fs-8 textLight-hover" href="#">
+            <a class="d-flex flex-row text-muted fs-8 " href="#">
               <i class="bi bi-building"></i> &nbsp;&nbsp;
               املاک
             </a>
           </li>
           <li class="list-group-item border-0">
-            <a class="d-flex flex-row text-muted fs-8 textLight-hover" href="#">
+            <a class="d-flex flex-row text-muted fs-8 text-black-hover" href="#">
               <i class="bi bi-car-front-fill"></i> &nbsp;&nbsp;
               وسایل نقلیه
             </a>
           </li>
           <li class="list-group-item border-0">
-            <a class="d-flex flex-row text-muted fs-8 textLight-hover" href="#">
+            <a class="d-flex flex-row text-muted fs-8 text-black-hover" href="#">
               <i class="bi bi-phone"></i> &nbsp;&nbsp;
               کالای دیجیتال
             </a>
           </li>
           <li class="list-group-item border-0">
-            <a class="d-flex flex-row text-muted fs-8 textLight-hover" href="#">
+            <a class="d-flex flex-row text-muted fs-8 text-black-hover" href="#">
               <i class="bi bi-lamp"></i> &nbsp;&nbsp;
               خانه و آشپزخانه
             </a>
           </li>
           <li class="list-group-item border-0">
-            <a class="d-flex flex-row text-muted fs-8 textLight-hover" href="#">
+            <a class="d-flex flex-row text-muted fs-8 text-black-hover" href="#">
               <i class="bi bi-brush"></i> &nbsp;&nbsp;
               خدمات
             </a>
           </li>
           <li class="list-group-item border-0">
-            <a class="d-flex flex-row text-muted fs-8 textLight-hover" href="#">
+            <a class="d-flex flex-row text-muted fs-8 text-black-hover" href="#">
               <i class="bi bi-watch"></i> &nbsp;&nbsp;
               وسایل شخصی
             </a>
           </li>
           <li class="list-group-item border-0">
-            <a class="d-flex flex-row text-muted fs-8 textLight-hover" href="#">
+            <a class="d-flex flex-row text-muted fs-8 text-black-hover" href="#">
               <i class="bi bi-dice-6"></i> &nbsp;&nbsp;
               سرگرمی و فراغت
             </a>
           </li>
           <li class="list-group-item border-0">
-            <a class="d-flex flex-row text-muted fs-8 textLight-hover" href="#">
+            <a class="d-flex flex-row text-muted fs-8 text-black-hover" href="#">
               <i class="bi bi-people"></i> &nbsp;&nbsp;
               اجتماعی
             </a>
           </li>
           <li class="list-group-item border-0">
-            <a class="d-flex flex-row text-muted fs-8 textLight-hover" href="#">
+            <a class="d-flex flex-row text-muted fs-8 text-black-hover" href="#">
               <i class="bi bi-door-closed"></i> &nbsp;&nbsp;
               تجهیزات و صنعتی
             </a>
           </li>
           <li class="list-group-item border-0">
-            <a class="d-flex flex-row text-muted fs-8 textLight-hover" href="#">
+            <a class="d-flex flex-row text-muted fs-8 text-black-hover" href="#">
               <i class="bi bi-briefcase"></i> &nbsp;&nbsp;
               استخدام و کاریابی
             </a>
@@ -198,38 +198,38 @@
         </ul>
         <div class="border-bottom d-flex flex-column">
           <div class="d-flex flex-row">
-            <a class=" text-muted fs-8 w-100 p-3 textLight-hover" href="#">
+            <a class=" text-muted fs-8 w-100 p-3 text-black-hover" href="#">
               <i class="bi bi-caret-down"></i>&nbsp;&nbsp;محل
             </a>
           </div>
         </div>
         <div class="border-bottom d-flex flex-column">
           <div class="d-flex flex-row">
-            <a class=" text-muted fs-8 w-100 p-3 textLight-hover" href="#">
+            <a class=" text-muted fs-8 w-100 p-3 text-black-hover" href="#">
               <i class="bi bi-caret-down"></i>&nbsp;&nbsp;قیمت
             </a>
           </div>
         </div>
         <div class="border-bottom d-flex flex-column">
           <div class="d-flex flex-row">
-            <a class=" text-muted fs-8 w-100 p-3 textLight-hover" href="#">
+            <a class=" text-muted fs-8 w-100 p-3 text-black-hover" href="#">
               <i class="bi bi-caret-down"></i>&nbsp;&nbsp;وضعیت آگهی
             </a>
           </div>
         </div>
-        <div class="d-flex flex-row justify-content-center">
-          <div class="row">
-            <a class="col-md-4 p-2 pe-3 textLight-hover" href="#">درباره دیوار</a>
-            <a class="col-md-4 p-2 pe-3 textLight-hover" href="#">دریافت برنامه</a>
-            <a class="col-md-4 p-2 pe-3 textLight-hover" href="#">بلاگ دیوار</a>
-            <a class="col-md-4 p-2 pe-3 textLight-hover" href="#">پشتیبانی</a>
+        <div class=" ">
+          <div class="row text-right pt-3">
+            <a class="col-md-4 fs-11 px-3 py-2  text-muted text-black-hover" href="#">درباره دیوار</a>
+            <a class="col-md-4 fs-11 px-3 py-2  text-muted text-black-hover" href="#">دریافت برنامه</a>
+            <a class="col-md-4 fs-11 px-3 py-2  text-muted text-black-hover" href="#">بلاگ دیوار</a>
+            <a class="col-md-4 fs-11 px-3 py-2  text-muted text-black-hover" href="#">پشتیبانی</a>
           </div>
         </div>
-        <div class="d-flex flex-row justify-content-center mt-4">
-          <a class="col-md-2 textLight-hover text-center w-auto pe-4" href="#"><i class="bi bi-youtube"></i></a>
-          <a class="col-md-2 textLight-hover text-center w-auto pe-4" href="#"><i class="bi bi-linkedin"></i></a>
-          <a class="col-md-2 textLight-hover text-center w-auto pe-4" href="#"><i class="bi bi-instagram"></i></a>
-          <a class="col-md-2 textLight-hover text-center w-auto pe-4" href="#"><i class="bi bi-twitter"></i></a>
+        <div class="d-flex flex-row justify-content-center mt-3">
+          <a class="col-md-2 text-black-hover text-center w-auto pe-4" href="#"><i class="bi bi-youtube"></i></a>
+          <a class="col-md-2 text-black-hover text-center w-auto pe-4" href="#"><i class="bi bi-linkedin"></i></a>
+          <a class="col-md-2 text-black-hover text-center w-auto pe-4" href="#"><i class="bi bi-instagram"></i></a>
+          <a class="col-md-2 text-black-hover text-center w-auto pe-4" href="#"><i class="bi bi-twitter"></i></a>
         </div>
         <div class="d-flex flex-row justify-content-center mt-5">
           <a class="w-auto text-center" href="#">
@@ -258,8 +258,8 @@
         <div>
           <img class="img-card" src="https://s101.divarcdn.com/static/pictures/1662608653/wYZQmt9o.jpg" alt="">
         </div>
-        <div class="text-start d-flex flex-column justify-content-around">
-          <h4 class="fs-8 pt-2 ">اجاق گاز مبله فردارچهارشعله خیلی تمیز</h4>
+        <div class="text-start d-flex flex-column justify-content-around ">
+          <h4 class="fs-8 pt-2 text-black">اجاق گاز مبله فردارچهارشعله خیلی تمیز</h4>
           <div>
             <span class="text-muted fs-8 fs-10">در حد نو</span>
             <br>
@@ -279,7 +279,7 @@
           <img class="img-card" src="https://s101.divarcdn.com/static/pictures/1662608653/wYZQmt9o.jpg" alt="">
         </div>
         <div class="text-start d-flex flex-column justify-content-around">
-          <h4 class="fs-8 pt-2 ">اجاق گاز مبله فردارچهارشعله خیلی تمیز</h4>
+          <h4 class="fs-8 pt-2 text-black">اجاق گاز مبله فردارچهارشعله خیلی تمیز</h4>
           <div>
             <span class="text-muted fs-8 fs-10">در حد نو</span>
             <br>
@@ -299,7 +299,7 @@
           <img class="img-card" src="https://s101.divarcdn.com/static/pictures/1662608653/wYZQmt9o.jpg" alt="">
         </div>
         <div class="text-start d-flex flex-column justify-content-around">
-          <h4 class="fs-8 pt-2 ">اجاق گاز مبله فردارچهارشعله خیلی تمیز</h4>
+          <h4 class="fs-8 pt-2 text-black">اجاق گاز مبله فردارچهارشعله خیلی تمیز</h4>
           <div>
             <span class="text-muted fs-10">در حد نو</span>
             <br>
@@ -319,7 +319,7 @@
           <img class="img-card" src="https://s101.divarcdn.com/static/pictures/1662608653/wYZQmt9o.jpg" alt="">
         </div>
         <div class="text-start d-flex flex-column justify-content-around">
-          <h4 class="fs-8 pt-2 ">اجاق گاز مبله فردارچهارشعله خیلی تمیز</h4>
+          <h4 class="fs-8 pt-2 text-black">اجاق گاز مبله فردارچهارشعله خیلی تمیز</h4>
           <div>
             <span class="text-muted fs-10">در حد نو</span>
             <br>
@@ -339,7 +339,7 @@
           <img class="img-card" src="https://s101.divarcdn.com/static/pictures/1662608653/wYZQmt9o.jpg" alt="">
         </div>
         <div class="text-start d-flex flex-column justify-content-around">
-          <h4 class="fs-8 pt-2 ">اجاق گاز مبله فردارچهارشعله خیلی تمیز</h4>
+          <h4 class="fs-8 pt-2 text-black">اجاق گاز مبله فردارچهارشعله خیلی تمیز</h4>
           <div>
             <span class="text-muted fs-10">در حد نو</span>
             <br>
@@ -359,7 +359,7 @@
           <img class="img-card" src="https://s101.divarcdn.com/static/pictures/1662608653/wYZQmt9o.jpg" alt="">
         </div>
         <div class="text-start d-flex flex-column justify-content-around">
-          <h4 class="fs-8 pt-2 ">اجاق گاز مبله فردارچهارشعله خیلی تمیز</h4>
+          <h4 class="fs-8 pt-2 text-black">اجاق گاز مبله فردارچهارشعله خیلی تمیز</h4>
           <div>
             <span class="text-muted fs-10">در حد نو</span>
             <br>
