--- a/divar-Index-Home/index.html
+++ b/divar-Index-Home/index.html
@@ -197,25 +197,72 @@
           </li>
         </ul>
         <div class="border-bottom d-flex flex-column">
-          <div class="d-flex flex-row">
-            <a class=" text-muted fs-8 w-100 p-3 text-black-hover" href="#">
+          <div class="d-flex flex-column">
+            <a class="text-muted fs-8 w-100 p-3 text-black-hover" data-bs-toggle="collapse" data-bs-target="#selectArea"
+              href="#">
               <i class="bi bi-caret-down"></i>&nbsp;&nbsp;محل
             </a>
+
+            <div id="selectArea" class="collapse">
+              <div class="d-flex flex-row-reverse align-items-center">
+                <input type="text" class="form-control text-start fs-10 mb-3 mt-2 p-2 pe-5 input-focus"
+                  placeholder="تعیین محل">
+                <i class="bi bi-caret-left position-absolute text-muted pe-2 p-b-2 fs-5"></i>
+              </div>
+            </div>
           </div>
         </div>
         <div class="border-bottom d-flex flex-column">
           <div class="d-flex flex-row">
-            <a class=" text-muted fs-8 w-100 p-3 text-black-hover" href="#">
+            <a class=" text-muted fs-8 w-100 p-3 text-black-hover" data-bs-toggle="collapse"
+              data-bs-target="#selectAmount" href="#">
               <i class="bi bi-caret-down"></i>&nbsp;&nbsp;قیمت
             </a>
           </div>
+
+          <div id="selectAmount" class="collapse">
+            <div class="d-flex flex-row-reverse align-items-center">
+              <input type="text" class="form-control text-start fs-10 mb-1 mt-2 p-2 pe-5 input-focus"
+                placeholder="مثلا 70000000">
+              <h6 class="text-muted fs-10 pe-3">حداقل</h6>
+              <i class="bi bi-caret-down position-absolute text-muted pe-2 p-b-2 fs-5"></i>
+              <h6 class="position-absolute text-muted pe-5 p-b-2 fs-10">تومان</h6>
+            </div>
+            <div class="d-flex flex-row-reverse align-items-center">
+              <input type="text" class="form-control text-start fs-10 mb-3 mt-2 p-2 pe-5 input-focus"
+                placeholder="مثلا 70000000">
+              <h6 class="text-muted fs-10 pe-3">حداکثر</h6>
+              <i class="bi bi-caret-down position-absolute text-muted pe-2 p-b-2 fs-5"></i>
+              <h6 class="position-absolute text-muted pe-5 p-b-2 fs-10">تومان</h6>
+            </div>
+          </div>
+
         </div>
         <div class="border-bottom d-flex flex-column">
           <div class="d-flex flex-row">
-            <a class=" text-muted fs-8 w-100 p-3 text-black-hover" href="#">
+            <a class=" text-muted fs-8 w-100 p-3 text-black-hover" href="#" data-bs-toggle="collapse"
+              data-bs-target="#selectCustomerState">
               <i class="bi bi-caret-down"></i>&nbsp;&nbsp;وضعیت آگهی
             </a>
           </div>
+
+          <div class="collapse" id="selectCustomerState">
+            <div class="d-flex flex-column">
+              <div class="d-flex flex-row p-2 justify-content-between">
+                <h6 class="fs-10 text-black">فقط عکس‌دار</h6>
+                <div class="form-check form-switch">
+                  <input class="form-check-input fs-5" type="checkbox" role="switch" id="toggle-justPic">
+                </div>
+              </div>
+              <div class="d-flex flex-row p-2 justify-content-between">
+                <h6 class="fs-10 text-black">فقط فوری‌ها</h6>
+                <div class="form-check form-switch">
+                  <input class="form-check-input fs-5" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+                </div>
+              </div>
+            </div>
+          </div>
+
         </div>
         <div>
           <div class="row text-right pt-3">
@@ -226,10 +273,14 @@
           </div>
         </div>
         <div class="d-flex flex-row-reverse justify-content-center mt-3">
-          <a class="col-md-2 text-muted text-black-hover text-center w-auto pe-4" href="#"><i class="bi bi-youtube"></i></a>
-          <a class="col-md-2 text-muted text-black-hover text-center w-auto pe-4" href="#"><i class="bi bi-linkedin"></i></a>
-          <a class="col-md-2 text-muted text-black-hover text-center w-auto pe-4" href="#"><i class="bi bi-instagram"></i></a>
-          <a class="col-md-2 text-muted text-black-hover text-center w-auto pe-4" href="#"><i class="bi bi-twitter"></i></a>
+          <a class="col-md-2 text-muted text-black-hover text-center w-auto pe-4" href="#"><i
+              class="bi bi-youtube"></i></a>
+          <a class="col-md-2 text-muted text-black-hover text-center w-auto pe-4" href="#"><i
+              class="bi bi-linkedin"></i></a>
+          <a class="col-md-2 text-muted text-black-hover text-center w-auto pe-4" href="#"><i
+              class="bi bi-instagram"></i></a>
+          <a class="col-md-2 text-muted text-black-hover text-center w-auto pe-4" href="#"><i
+              class="bi bi-twitter"></i></a>
         </div>
         <div class="d-flex flex-row justify-content-center mt-4">
           <a class="w-auto text-center" href="#">
@@ -249,11 +300,17 @@
 
       <aside class="d-none col-12 mini-sidebar position-fixed bottom-0 start-0 border-top bg-white">
         <div class="d-flex align-items-center justify-content-between">
-            <a class="d-flex align-items-center text-color-brand p-3 fs-10 miniSidebar-button" href="#">دیوار آگهی‌ها</a>
-            <button class="d-flex align-items-center bg-transparent border-0 p-3 text-muted bg-gray-hover text-black-hover miniSidebar-button"><i class="bi bi-list-ul"></i>&nbsp;&nbsp;دسته‌ها</button>
-            <button class="d-flex align-items-center bg-transparent border-0 p-3 text-muted bg-gray-hover text-black-hover miniSidebar-button"><i class="bi bi-plus-circle-fill"></i>&nbsp;&nbsp;ثبت آگهی</button>
-            <a class="d-flex align-items-center text-muted h-100 p-3 text-muted bg-gray-hover text-black-hover miniSidebar-button" href="#"><i class="bi bi-chat-fill"></i>&nbsp;&nbsp;چت</a>
-            <a class="d-flex align-items-center text-muted h-100 p-3 text-muted bg-gray-hover text-black-hover miniSidebar-button" href="#"><i class="bi bi-person-fill"></i>&nbsp;&nbsp;دیوار من</a>
+          <a class="d-flex align-items-center text-color-brand p-3 fs-10 miniSidebar-button" href="#">دیوار آگهی‌ها</a>
+          <button
+            class="d-flex align-items-center bg-transparent border-0 p-3 text-muted bg-gray-hover text-black-hover miniSidebar-button"><i
+              class="bi bi-list-ul"></i>&nbsp;&nbsp;دسته‌ها</button>
+          <button
+            class="d-flex align-items-center bg-transparent border-0 p-3 text-muted bg-gray-hover text-black-hover miniSidebar-button"><i
+              class="bi bi-plus-circle-fill"></i>&nbsp;&nbsp;ثبت آگهی</button>
+          <a class="d-flex align-items-center text-muted h-100 p-3 text-muted bg-gray-hover text-black-hover miniSidebar-button"
+            href="#"><i class="bi bi-chat-fill"></i>&nbsp;&nbsp;چت</a>
+          <a class="d-flex align-items-center text-muted h-100 p-3 text-muted bg-gray-hover text-black-hover miniSidebar-button"
+            href="#"><i class="bi bi-person-fill"></i>&nbsp;&nbsp;دیوار من</a>
         </div>
       </aside>
 
