--- a/customer-page/index.html
+++ b/customer-page/index.html
@@ -142,8 +142,8 @@
     <!-- breadcrumb -->
 
     <div class="row mt-3">
-      <div class="col-lg-8 col-md-12  ">
-        <div class="carousel bg-danger slide" data-bs-interval="7000" data-bs-ride="carousel" id="carousel-cs">
+      <div class="col-lg-8 col-md-12">
+        <div class="carousel slide" data-bs-interval="7000" data-bs-ride="carousel" id="carousel-cs">
           <ol class="carousel-indicators">
             <li data-bs-target="#carousel-cs" data-bs-slide-to="0" class="active"></li>
             <li data-bs-target="#carousel-cs" data-bs-slide-to="1"></li>
@@ -176,23 +176,18 @@
 
           </div>
         </div>
-
         <div class="mt-2 d-none d-lg-block">
-          <form action="" class="">
-            <textarea dir="rtl"
-            class="text-right p-2 focus-brand-color text-start textarea-notes" 
-            placeholder="یاداشت شما .. "
-            style="width: 100%;resize: none;" 
-            name="" id=""
-            cols="100%"
-            rows="5"></textarea>
+          <form action="">
+            <textarea dir="rtl" class="text-right p-2 focus-brand-color text-start textarea-notes"
+              placeholder="یاداشت شما .. " style="width: 100%;resize: none;" name="" id="" cols="100%"
+              rows="5"></textarea>
           </form>
           <div class="text-start" dir="rtl">
-            <span class="text-muted fs-20 " >
+            <span class="text-muted fs-20 ">
               یادداشت تنها برای شما قابل دیدن است و پس از حذف آگهی، پاک خواهد شد.
             </span>
           </div>
-          <div dir="rtl"  class="mt-4 fs-21">
+          <div dir="rtl" class="mt-4 fs-21">
             <a href="" class="text-decoration-none text-muted fs-11">
               <div class=" border-bottom py-3">
                 <i class="bi bi-question-circle"></i>
@@ -208,7 +203,7 @@
           </div>
         </div>
       </div>
-      <div class="col-lg-4 col-md-12 " dir="rtl">
+      <div class="col-lg-4 col-md-12" dir="rtl">
         <div>
           <div class="container-cs  d-flex flex-direction-column mt-4">
             <div class="headers-body text-right">
@@ -218,8 +213,11 @@
 
               <div class="d-flex justify-content-between align-items-center my-4">
                 <div class="w-auto ">
-                  <a href="" class="btn btn-brand btn-cs px-3 text-white text-brand-hover">اطلاعات تماس</a>
-                  <a href="" class="btn btn-brand btn-cs px-5 text-brand bg-white btn-outline-brand">چت</a>
+                    <a href="" class="responsive-btn btn  fs-22 btn-brand btn-cs px-lg-2 px-md-4 fs-10  px-4 text-white text-brand-hover">اطلاعات
+                      تماس</a>
+                    <a href=""
+                      class="responsive-btn btn btn-brand fs-22  btn-cs px-lg-4 px-md-5  px-4  fs-10 text-brand bg-white btn-outline-brand">چت
+                    </a>
                 </div>
                 <div class="w-auto pe-2">
                   <a href="#" class="icon-save-share text-muted p-2 "><i class="fs-10 fa-solid fa-bookmark"></i></a>
@@ -278,29 +276,22 @@
     </div>
 
     <div class=" w-100 h-100 mt-4 p-3 d-flex justify-content-between align-items-center">
-        <div class=" d-flex justify-content-center align-center"
-            >
-              <a class="m-3 text-muted hover-black" href=""
-                ><i class="bi bi-twitter"></i>
-              </a>
-              <a class="m-3 text-muted hover-black" href=""
-                ><i class="bi bi-instagram"></i>
-              </a>
-              <a class="m-3 text-muted hover-black" href=""
-                ><i class="bi bi-linkedin"></i>
-              </a>
-              <a class="m-3 text-muted hover-black" href=""><i class="bi bi-github"></i></a>
-        </div>
-        <div class="text-muted fs-7">
-              <span class="px-2 border-end " >درباره دیوار</span>
-              <span class="px-2 border-end" >پشتیبانی و قوانین</span>
-              <span class="px-2 " >بلاگ دیوار</span>
-        </div>
+      <div class=" d-flex justify-content-center align-center">
+        <a class="m-3 text-muted hover-black" href=""><i class="bi bi-twitter"></i>
+        </a>
+        <a class="m-3 text-muted hover-black" href=""><i class="bi bi-instagram"></i>
+        </a>
+        <a class="m-3 text-muted hover-black" href=""><i class="bi bi-linkedin"></i>
+        </a>
+        <a class="m-3 text-muted hover-black" href=""><i class="bi bi-github"></i></a>
+      </div>
+      <div class="text-muted fs-7">
+        <span class="px-2 border-end ">درباره دیوار</span>
+        <span class="px-2 border-end">پشتیبانی و قوانین</span>
+        <span class="px-2 ">بلاگ دیوار</span>
+      </div>
     </div>
   </div>
-
-
-
 
 
 
