--- a/divar-Index-Home/index.html
+++ b/divar-Index-Home/index.html
@@ -198,9 +198,9 @@
         </ul>
         <div class="border-bottom d-flex flex-column">
           <div class="d-flex flex-column">
-            <a class="text-muted fs-8 w-100 p-3 text-black-hover" data-bs-toggle="collapse" data-bs-target="#selectArea"
+            <a class="text-muted fs-8 w-100 p-3 text-black-hover" onclick="sidebarButtons_animation('selectAreaIcon')" data-bs-toggle="collapse" data-bs-target="#selectArea"
               href="#">
-              <i class="bi bi-caret-down"></i>&nbsp;&nbsp;محل
+              <label id="selectAreaIcon" class="transition-all-1s"><i class="bi bi-caret-down"></i></label>&nbsp;&nbsp;محل
             </a>
 
             <div id="selectArea" class="collapse">
@@ -214,9 +214,9 @@
         </div>
         <div class="border-bottom d-flex flex-column">
           <div class="d-flex flex-row">
-            <a class=" text-muted fs-8 w-100 p-3 text-black-hover" data-bs-toggle="collapse"
+            <a class=" text-muted fs-8 w-100 p-3 text-black-hover" onclick="sidebarButtons_animation('selectAmountIcon')" data-bs-toggle="collapse"
               data-bs-target="#selectAmount" href="#">
-              <i class="bi bi-caret-down"></i>&nbsp;&nbsp;قیمت
+              <label id="selectAmountIcon" class="transition-all-1s"><i class="bi bi-caret-down"></i></label>&nbsp;&nbsp;قیمت
             </a>
           </div>
 
@@ -225,24 +225,22 @@
               <input type="text" class="form-control text-start fs-10 mb-1 mt-2 p-2 pe-5 input-focus"
                 placeholder="مثلا 70000000">
               <h6 class="text-muted fs-10 pe-3">حداقل</h6>
-              <i class="bi bi-caret-down position-absolute text-muted pe-2 p-b-2 fs-5"></i>
-              <h6 class="position-absolute text-muted pe-5 p-b-2 fs-10">تومان</h6>
+              <h6 class="position-absolute text-muted pe-2 p-b-2 fs-10">تومان</h6>
             </div>
             <div class="d-flex flex-row-reverse align-items-center">
               <input type="text" class="form-control text-start fs-10 mb-3 mt-2 p-2 pe-5 input-focus"
                 placeholder="مثلا 70000000">
               <h6 class="text-muted fs-10 pe-3">حداکثر</h6>
-              <i class="bi bi-caret-down position-absolute text-muted pe-2 p-b-2 fs-5"></i>
-              <h6 class="position-absolute text-muted pe-5 p-b-2 fs-10">تومان</h6>
+              <h6 class="position-absolute text-muted pe-2 p-b-2 fs-10">تومان</h6>
             </div>
           </div>
 
         </div>
         <div class="border-bottom d-flex flex-column">
           <div class="d-flex flex-row">
-            <a class=" text-muted fs-8 w-100 p-3 text-black-hover" href="#" data-bs-toggle="collapse"
+            <a class=" text-muted fs-8 w-100 p-3 text-black-hover" onclick="sidebarButtons_animation('selectCustomerStateIcon')" href="#" data-bs-toggle="collapse"
               data-bs-target="#selectCustomerState">
-              <i class="bi bi-caret-down"></i>&nbsp;&nbsp;وضعیت آگهی
+              <label id="selectCustomerStateIcon" class="transition-all-1s"><i class="bi bi-caret-down"></i></label>&nbsp;&nbsp;وضعیت آگهی
             </a>
           </div>
 
@@ -251,13 +249,13 @@
               <div class="d-flex flex-row p-2 justify-content-between">
                 <h6 class="fs-10 text-black">فقط عکس‌دار</h6>
                 <div class="form-check form-switch">
-                  <input class="form-check-input fs-5" type="checkbox" role="switch" id="toggle-justPic">
+                  <input class="form-check-input fs-5 shadow-none" onclick="switchToggle_changeBgColor(this.id)" type="checkbox" role="switch" id="toggle-justPic">
                 </div>
               </div>
               <div class="d-flex flex-row p-2 justify-content-between">
                 <h6 class="fs-10 text-black">فقط فوری‌ها</h6>
                 <div class="form-check form-switch">
-                  <input class="form-check-input fs-5" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+                  <input class="form-check-input fs-5 shadow-none" onclick="switchToggle_changeBgColor(this.id)" type="checkbox" role="switch" id="toggle-justQuick">
                 </div>
               </div>
             </div>
@@ -456,13 +454,10 @@
   </div>
 
 
-
-
-
-
-
   <script src="./JS/jquery-3.6.1.slim.min.js"></script>
   <script src="JS/bootstrap.bundle.min.js"></script>
+  <script src="JS/script.js"></script>
 </body>
 
 </html>
+
